--- a/nexus.toml
+++ b/nexus.toml
@@ -1,6 +1,6 @@
 [project]
 name = "zpp_args"
-version = "1.3.2"
+version = "1.3.3"
 description = "Module pour le traitement des arguments d'une ligne de commande"
 mainfile = "__init__.py"
 requires-python = ">=3.6"
@@ -14,6 +14,7 @@ license_file = "LICENSE"
 keywords = ["terminal","args","zephyroff"]
 classifiers = ["Development Status :: 5 - Production/Stable", "Environment :: Console", "License :: OSI Approved :: MIT License", "Programming Language :: Python :: 3"]
 copyright = ""
+changelog = "changelog.md"
 
 [project.urls]
 changelog = ""
