--- a/nexus.toml
+++ b/nexus.toml
@@ -1,6 +1,6 @@
 [project]
 name = "zpp_args"
-version = "1.3.3"
+version = "1.3.4"
 description = "Module pour le traitement des arguments d'une ligne de commande"
 mainfile = "__init__.py"
 requires-python = ">=3.6"
@@ -18,8 +18,8 @@ changelog = "changelog.md"
 
 [project.urls]
 changelog = ""
-homepage = "https://github.com/ZephyrOff/py-zpp_args"
-documentation = "https://github.com/ZephyrOff/py-zpp_args"
+homepage = "https://github.com/ZephyrOff/zpp_args"
+documentation = "https://github.com/ZephyrOff/zpp_args"
 
 [project.dependencies]
 
